css/material.css
.nav-tabs {
    margin-bottom: 0;
}

.tab-content {
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd; 
    border-bottom: 1px solid #ddd; 
    padding: 8px;
    margin-bottom: 16px
}

.tab-pane {
    margin-top: 48px;
    margin-bottom: 48px;
    padding: 16px;
}

/* Modal */
.modal-body {
    padding: 2px;
}

/* Block */
.wrapper {   
    border-radius: 30px;   
    padding: 16px;
    padding-bottom: 4px;
    position: relative;
}
.raw-wrapper {
    border: 8px solid white;
    background: #73AD21;
}
.component-wrapper {
    border: 8px solid white;
    background: #F3F781;
}
.special-wrapper {
    border: 8px solid white;
    background: #58D3F7;
}
.transport-wrapper {
    border: 8px solid white;
    background: #F5A9A9;
    padding-bottom: 16px;
}

/* Image */
.icon-materials {
    width: 100%;
    height: 100%
}
.icon-components {
    width: 100%;
    height: 100%
}
.icon-special {
    width: 100%;
    height: 100%
}



/* Number Count */
.count {
    position: absolute;
    top: 5%;
    left: 10%;
    font-size: 32px;
}
.raw-count {
    color: #0f6537;
}
.component-count {
    color: orange;
}
.special-count {
    color: #3c5896;
}

/* Name */
.name {
    padding-top: 12px;
    font-weight: bold;
    font-size: 16px;
}
.transport-name {
    font-size: 17px;
}

.hint {
    padding: 8px;
    font-size: 16px;
}

@media screen and (max-width: 499px){
.nav-tabs > li > a {
    padding: 10px;
}

.tab-content {
    padding: 4px;
}

.tab-pane {
    margin-top: 4px;
    margin-bottom: 4px;
    padding: 12px;
}

/* Block */
.wrapper {   
    border-radius: 15px;   
    padding: 8px;
    padding-bottom: 0px;
}
.raw-wrapper {
    border: 4px solid white;
}
.component-wrapper {
    border: 4px solid white;
}
.special-wrapper {
    border: 4px solid white;
}
.transport-wrapper {
    border: 4px solid white;
    padding-bottom: 8px;
}

/* Number Count */
.count {
    position: absolute;
    top: 5%;
    left: 10%;
    font-size: 14px;
}

/* Name */
.name {
    padding-top: 6px;
    font-weight: bold;
    font-size: 10px;
}
.transport-name {
    font-size: 10px;
}

.hint {
    padding: 4px;
    font-size: 10px;
}
}

@media screen and (min-width: 500px) and (max-width: 800){
.tab-content {
    padding: 4px;
}

.tab-pane {
    margin-top: 6px;
    margin-bottom: 6px;
    padding: 16px;
}

/* Block */
.wrapper {   
    border-radius: 18px;   
    padding: 12px;
    padding-bottom: 0px;
}
.raw-wrapper {
    border: 6px solid white;
}
.component-wrapper {
    border: 6px solid white;
}
.special-wrapper {
    border: 6px solid white;
}
.transport-wrapper {
    border: 6px solid white;
    padding-bottom: 12px;
}

/* Number Count */
.count {
    position: absolute;
    top: 5%;
    left: 10%;
    font-size: 14px;
}

/* Name */
.name {
    padding-top: 6px;
    font-weight: bold;
    font-size: 14px;
}
.transport-name {
    font-size: 16px;
}

.hint {
    padding: 6px;
    font-size: 14px;
}
}

